@@ -8,3 +8,7 @@ Javguru - fix listing
 Fullporner - new site
 DrTuber - new site
 HentaiStream - fix quality selection
+Settings - moved Enable/Disable Debug Log to new 'Advanced' section
+         - added item to start Kodi Logfile Uploader (under enable debug log)
+         - added item to filter out keywords (separated by a ;) from every video listing
+         - added item to filter out hosters (separated by a ;), for example you can add k2s.cc
